<resources>
    <string name="app_name">ThessApp</string>
    <string name="title_activity_main">Main</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="greek">Greek</string>
    <string name="iconsize">Icon Size</string>
    <string name="normal_icon_size">Normal Icons</string>
    <string name="small_icons">Small Icons</string>
</resources>