<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/language"/>

    <RadioGroup
        android:id="@+id/radioLanguage" android:layout_width="wrap_content" android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/english" android:checked="true" />

        <RadioButton
            android:id="@+id/radioGreek"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/greek" />

    </RadioGroup>

    <View style="@style/Divider"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/iconsize"/>

    <RadioGroup
        android:id="@+id/radioIconSize" android:layout_width="wrap_content" android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/iconSizeNormal"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/normal_icon_size" android:checked="true" />

        <RadioButton
            android:id="@+id/iconSizeSmall"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/small_icons" />

    </RadioGroup>


</LinearLayout>